--- a/public/index.html
+++ b/public/index.html
@@ -155,9 +155,7 @@
                             <p>Nusa Tenggara Timur, Indonesia</p>
                         </div>
                         <div class="details">
-                            <p>Pulau Komodo adalah sebuah pulau yang terletak di Kepulauan Nusa Tenggara, berada di
-                                sebelah
-                                timur Pulau Sumbawa. Dikenal juga sebagai habitat asli hewan komodo.</p>
+                            <p>Pulau Komodo adalah sebuah pulau yang terletak di Kepulauan Nusa Tenggara, berada di sebelah timur Pulau Sumbawa. Dikenal juga sebagai habitat asli hewan komodo.</p>
                         </div>
                         <div class="button-cardhiji">
                             <a href="#">Explore <img src="../assets/Vector (2).png" alt=""></a>
@@ -170,16 +168,14 @@
                     </div>
                     <div class="contentreading">
                         <div class="title">
-                            <h3>Pulau Komodo</h3>
+                            <h3>Raja Ampat</h3>
                         </div>
                         <div class="location">
                             <img src="../assets/pin 1.svg" alt="">
-                            <p>Nusa Tenggara Timur, Indonesia</p>
+                            <p>Papua Barat, Indonesia</p>
                         </div>
                         <div class="details">
-                            <p>Pulau Komodo adalah sebuah pulau yang terletak di Kepualauan Nusa Tenggara, berada di
-                                sebelah
-                                timur Pulau Sumbawa. Dikenal juga sebagai habitat asli hewan komodo.</p>
+                            <p>Kepulauan Raja Ampat adalah kepulauan Indonesia di ujung barat laut Semenanjung <br>Kepala Burung di Papua Barat. Terdiri dari ratusan pulau yang tertutup hutan, Raja Ampat dikenal dengan pantai dan terumbu karangnya yang kaya dengan kehidupan laut.</p>
                         </div>
                         <div class="button-cardhiji">
                             <a href="#">Explore <img src="../assets/Vector (2).png" alt=""></a>
