--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                     you will feel the unforgettable experience of Indonesia.
                 </div>
                 <div class="iconInfo">
-                    <div class="info"><img src="/assets/monument.png">
+                    <div class="info"><img src="/assets/monument (1).svg">
                         <p><span>5,000+</span> <br> Local Tradisional Food</p>
                     </div>
                     <div class="info"><img src="/assets/monument.svg">
@@ -74,8 +74,8 @@
 
                 </div>
                 <div class="tombol">
-                    <a href="#" class="start">Start Tour <img src="/assets/Vector (1).png"></a>
-                    <a href="#" class="see">See Reference <img src="/assets/Vector (2).png"></a>
+                    <a href="#" class="start">Start Tour</a>
+                    <a href="#" class="see">See Reference</a>
                 </div>
             </div>
             <div class="right">
@@ -103,16 +103,16 @@
         <div class="content">
             <div class="card-container">
                 <div class="card" style="background-image: url(/assets/GWK.png);">
-                    <p><b>Garuda Wisnu Kencana</b><br>Badung Regency, Bali</p>
+                    <p><b><span class="title-card">Garuda Wisnu Kencana</span></b><br>Badung Regency, Bali</p>
                 </div>
                 <div class="card" style="background-image: url(/assets/Kelingking.png);">
-                    <p><b>Kelingking Beach</b><br>Klungkung Regency, Bali</p>
+                    <p><b><span class="title-card">Kelingking Beach</span></b><br>Klungkung Regency, Bali</p>
                 </div>
                 <div class="card" style="background-image: url(/assets/borobudur.png);">
-                    <p><b>Borobudur Temple</b><br>Kab. Magelang, Center Java</p>
+                    <p><b><span class="title-card">Borobudur Temple</span></b><br>Kab. Magelang, Center Java</p>
                 </div>
                 <div class="card" style="background-image: url(/assets/Bromo.png);">
-                    <p><b>Mount Bromo</b><br>Pasuruan Regency, East Java</p>
+                    <p><b><span class="title-card">Mount Bromo</span></b><br>Pasuruan Regency, East Java</p>
                 </div>
                 
             </div>
@@ -175,7 +175,7 @@
                             <p>Papua Barat, Indonesia</p>
                         </div>
                         <div class="details">
-                            <p>Kepulauan Raja Ampat adalah kepulauan Indonesia di ujung barat laut Semenanjung <br>Kepala Burung di Papua Barat. Terdiri dari ratusan pulau yang tertutup hutan, Raja Ampat dikenal dengan pantai dan terumbu karangnya yang kaya dengan kehidupan laut.</p>
+                            <p>Kepulauan Raja Ampat adalah kepulauan Indonesia di ujung barat laut Semenanjung Kepala Burung di Papua Barat. Terdiri dari ratusan pulau yang tertutup hutan, Raja Ampat dikenal dengan pantai dan terumbu karangnya yang kaya dengan kehidupan laut.</p>
                         </div>
                         <div class="button-cardhiji">
                             <a href="#">Explore <img src="../assets/Vector (2).png" alt=""></a>
