--- a/public/bookPage.html
+++ b/public/bookPage.html
@@ -23,7 +23,7 @@
         </div>
         <div class="Navlink">
             <ul class="NavMenu">
-                <li class="linkItem"><a href="./articlePage.html">Article</a></li>
+                <li class="linkItem"><a href="./detail.html">Article</a></li>
                 <li class="linkItem"><a href="./bookPage.html">Destination</a></li>
                 <li class="linkItem"><a href="#">Feedbacks</a></li>
                 <li class="linkItem off"><a href="#">Search</a></li>
