--- a/public/bookPage.html
+++ b/public/bookPage.html
@@ -42,9 +42,6 @@
     </div>
     <!-- NAVBAR -->
     <!-- back -->
-    <div class="Back">
-        <a href="./index.html">Back to Main Page</a>
-    </div>
     <!-- back -->
     <div class="Search-Container">
         <div class="Heading">
@@ -76,7 +73,7 @@
                 </div>
             </button>
             <div class="panel">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui, laudantium.</p>
+                <p>Lore, ipsum dolor sit amet consectetur adipisicing elit. Qui, laudantium.</p>
 
             </div>
             <button class="accordion">
